--- a/credit_bancaire/views/credit_operation_deb.xml
+++ b/credit_bancaire/views/credit_operation_deb.xml
@@ -9,13 +9,13 @@
                     <button id="button_Confirm" name="action_Confirme" string="Confirmer"
                             class="btn-primary"
                             type="object"/>
-                    <button id="button_open_file" name="action_create_file" string="Créer un LC"
+                    <!--<button id="button_open_file" name="action_create_file" string="Créer un LC"
                             class="btn-primary" invisible="type != 4 or folder_id"
-                            type="object"/>
+                            type="object"/>-->
                     <field name="state" widget="statusbar" statusbar_visible="draft,confirmed" />
                 </header>
                 <sheet>
-                    <div name="button_box" position="inside">
+                    <!--<div name="button_box" position="inside">
                         <button name="open_folder" type="object" class="oe_stat_button"
                                 invisible="type != 4 or not folder_id"
                                 icon="fa-file-text-o">
@@ -23,7 +23,7 @@
                                 <span class="o_stat_text">LC ouverte</span>
                             </div>
                         </button>
-                    </div>
+                    </div>-->
                     <div class="oe_title">
 
                         <h1>
@@ -39,7 +39,7 @@
                             <field name="ref_interne"/>
                             <field name="client"/>
                             <field name="taux" invisible="1"/>
-                            <field name="folder_id" invisible="1"/>
+                            <!--<field name="folder_id" invisible="1"/>-->
                         </group>
                         <group>
                             <field name="montant_debloque"/>
