--- a/credit_bancaire/views/credit_operation_pd.xml
+++ b/credit_bancaire/views/credit_operation_pd.xml
@@ -96,7 +96,7 @@
                     <field name="state" widget="statusbar" statusbar_visible="draft,confirmed"/>
                 </header>
                 <sheet>
-                    <div name="button_box" position="inside">
+                    <!--<div name="button_box" position="inside">
                         <button name="open_folder" type="object" class="oe_stat_button"
                                 invisible="type != 4 or not folder_id"
                                 icon="fa-file-text-o">
@@ -104,7 +104,7 @@
                                 <span class="o_stat_text">LC ouverte</span>
                             </div>
                         </button>
-                    </div>
+                    </div>-->
                     <div class="oe_title">
 
                         <h1>
@@ -120,7 +120,7 @@
                             <field name="ref_interne" readonly="1"/>
                             <field name="client" readonly="1"/>
                             <field name="taux" invisible="1"/>
-                            <field name="folder_id" invisible="1"/>
+                            <!--<field name="folder_id" invisible="1"/>-->
                         </group>
                         <group>
                             <field name="montant_debloque" readonly="1"/>
