--- a/credit_bancaire/views/wizard.xml
+++ b/credit_bancaire/views/wizard.xml
@@ -15,5 +15,45 @@
                 </form>
             </field>
         </record>
+        <!--<record id="view_budget_request_form" model="ir.ui.view">
+        <field name="name">budget.request.form</field>
+        <field name="model">budget.request</field>
+        <field name="arch" type="xml">
+            <form>
+                <sheet>
+                    <group>
+                        <field name="titre" />
+                        <field name="note"/>
+                        <field name="user_id"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>-->
+
+        <record id="view_budget_request_tree" model="ir.ui.view">
+            <field name="name">budget.request.tree</field>
+            <field name="model">budget.request</field>
+            <field name="arch" type="xml">
+                <tree editable="bottom">
+                    <field name="name"/>
+                    <field name="start_date"/>
+                    <field name="end_date"/>
+                    <field name="amount"/>
+                    <field name="description"/>
+                </tree>
+            </field>
+        </record>
+
+        <record id="budget_request_action" model="ir.actions.act_window">
+            <field name="name">Demandes de Budget</field>
+            <field name="res_model">budget.request</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+        <menuitem id="budget_request_menu_credit"
+                  name="Demande de budget"
+                  parent="conf_credit"
+                  action="budget_request_action"
+                  sequence="7"/>
     </data>
 </odoo>
