--- a/credit_bancaire/views/wizard.xml
+++ b/credit_bancaire/views/wizard.xml
@@ -50,9 +50,14 @@
             <field name="res_model">budget.request</field>
             <field name="view_mode">tree,form</field>
         </record>
+
+        <menuitem id="budget_management_menu_credit"
+                  name="Gestion des Budgets"
+                  parent="account.menu_finance_reports"
+                  sequence="1"/>
         <menuitem id="budget_request_menu_credit"
                   name="Demande de budget"
-                  parent="conf_credit"
+                  parent="budget_management_menu_credit"
                   action="budget_request_action"
                   sequence="7"/>
     </data>
