--- a/credit_bancaire/views/credit_banque.xml
+++ b/credit_bancaire/views/credit_banque.xml
@@ -10,6 +10,7 @@
                         <field name="name"/>
                         <field name="code"/>
                         <field name="adresse_siege"/>
+                        <field name="journal_id"/>
                         <field name="web_site" widget="url"/>
                         <field name="nbr_agences"/>
                         <field name="agences"/>
