--- a/credit_bancaire/views/credit_op_deb_3.xml
+++ b/credit_bancaire/views/credit_op_deb_3.xml
@@ -13,7 +13,6 @@
                 </header>
                 <sheet>
                     <div class="oe_title">
-
                         <h1>
                             <field name="name" readonly="1"/>
                         </h1>
@@ -27,17 +26,22 @@
                             <field name="reference_credit"/>
                             <field name="ref_interne"/>
                             <field name="client" string="Fournisseur"/>
+                            <field name="taux" widget="percentage"/>
                         </group>
-                        <group>
+                        <group >
                             <field name="montant_debloque"/>
                             <field name="remboursement"/>
                             <field name="deblocage_date"/>
                             <field name="echeance_date" string="Date de 1er échéance"/>
                             <field name="echeance_fin_date" string="Date du dernier échéance"/>
                             <field name="taux_apply" string="Taux Appliqué"/>
-                            <field name="montant_total" string="Montant de l'échéance"/>
+                            <field name="montant_total" string="Montant de l'échéance" readonly="type_ligne in ['1', '3']"/>
+                            <field name="montant_total_comp" invisible="1"/>
+                            <field name="type_ligne" invisible="1"/>
                             <field name="plm" widget="percentage"/>
                         </group>
+
+
                     </group>
                     <notebook invisible="type not in [9,10,11,12]">
                         <page string="Echeances partiels">
