--- a/credit_bancaire/views/credit_operation_deb.xml
+++ b/credit_bancaire/views/credit_operation_deb.xml
@@ -12,18 +12,11 @@
                     <!--<button id="button_open_file" name="action_create_file" string="Créer un LC"
                             class="btn-primary" invisible="type != 4 or folder_id"
                             type="object"/>-->
-                    <field name="state" widget="statusbar" statusbar_visible="draft,confirmed" />
+                    <field name="state" widget="statusbar" statusbar_visible="draft,confirmed"/>
                 </header>
                 <sheet>
-                    <!--<div name="button_box" position="inside">
-                        <button name="open_folder" type="object" class="oe_stat_button"
-                                invisible="type != 4 or not folder_id"
-                                icon="fa-file-text-o">
-                            <div class="o_field_widget o_stat_info">
-                                <span class="o_stat_text">LC ouverte</span>
-                            </div>
-                        </button>
-                    </div>-->
+                    <div class="oe_button_box" name="button_box">
+                    </div>
                     <div class="oe_title">
 
                         <h1>
@@ -37,21 +30,28 @@
                             <field name="ligne_autorisation"/>
                             <field name="reference_credit"/>
                             <field name="ref_interne"/>
+                            <field name="amount_invoice" invisible="type not in [2,3]"/>
                             <field name="client"/>
-                            <field name="taux" invisible="1"/>
+                            <field name="taux" widget="percentage"/>
+                            <field name="type_ligne" invisible="1"/>
+                            <field name="type_id" invisible="1"/>
                             <!--<field name="folder_id" invisible="1"/>-->
                         </group>
-                        <group>
+                        <group invisible="type_id in [4]">
                             <field name="montant_debloque"/>
                             <field name="montant_add"/>
-                            <field name="montant_total"/>
+                            <field name="montant_total" readonly="type_ligne in ['1', '3']"/>
                             <field name="montant_rembourser"/>
                             <field name="deblocage_date"/>
                             <field name="echeance_date"/>
                         </group>
+                        <group invisible="type_id not in [4]">
+                            <field name="montant_debloque"  string="Montant LC"/>
+                            <field name="deblocage_date" string="Date d'ouverture"/>
+                        </group>
                     </group>
                     <notebook>
-                        <page string="Echeances partiels" invisible="type not in [9,10,11,12]">
+                        <page string="Echeances partiels" invisible="type_id not in [9,10,11,12]">
                             <tree>
                                 <field name="echeances"/>
                             </tree>
