--- a/credit_bancaire/views/wizard.xml
+++ b/credit_bancaire/views/wizard.xml
@@ -36,12 +36,25 @@
             <field name="model">budget.request</field>
             <field name="arch" type="xml">
                 <tree editable="bottom">
-                    <field name="name"/>
+                    <field name="user_id"/>
                     <field name="start_date"/>
                     <field name="end_date"/>
                     <field name="amount"/>
                     <field name="description"/>
                 </tree>
+            </field>
+        </record>
+
+        <record id="view_budget_request_search" model="ir.ui.view">
+            <field name="name">budget.request.search</field>
+            <field name="model">budget.request</field>
+            <field name="arch" type="xml">
+                <search>
+                    <field name="user_id"/>
+                    <field name="start_date"/>
+                    <field name="end_date"/>
+                    <filter string="Département" name="dept_filter" domain="[]" context="{'group_by':'user_id'}"/>
+                </search>
             </field>
         </record>
 
@@ -59,6 +72,71 @@
                   name="Demande de budget"
                   parent="budget_management_menu_credit"
                   action="budget_request_action"
+                  sequence="7"/>
+
+        <record id="view_endettement_tree" model="ir.ui.view">
+            <field name="name">credit.disponible.tree.endettement</field>
+            <field name="model">credit.disponible</field>
+            <field name="arch" type="xml">
+                <tree sample="1">
+                    <field name="banque"/>
+                    <field name="type"/>
+                    <field name="montant_difference"/>
+                </tree>
+            </field>
+        </record>
+
+        <record id="view_endettement_pivot" model="ir.ui.view">
+            <field name="name">credit.disponible.pivot.endettement</field>
+            <field name="model">credit.disponible</field>
+            <field name="arch" type="xml">
+                <pivot>
+                    <field name="banque" type="col"/>
+                    <field name="type" type="row"/>
+                    <field name="montant_difference" type="measure"/>
+                </pivot>
+            </field>
+        </record>
+        <record model="ir.actions.act_window" id="action_wizard_credit_endettement">
+            <field name="name">Rapport</field>
+            <field name="res_model">wizard.credit.endettement</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+        </record>
+        <record id="wizard_credit_endettement_view_form" model="ir.ui.view">
+            <field name="name">wizard.credit.endettement.view.form</field>
+            <field name="model">wizard.credit.endettement</field>
+            <field name="arch" type="xml">
+                <form string="Rapport">
+                    <sheet>
+                        <group>
+                            <p>Télécharger le rapport d'endettement</p>
+                        </group>
+                        <footer>
+                            <button name="send" string="Imprimer" type="object" class="oe_highlight" data-hotkey="q"/>
+                            <button string="Annuler" class="btn-secondary" special="cancel" data-hotkey="z"/>
+                        </footer>
+                    </sheet>
+                </form>
+            </field>
+        </record>
+        <record id="operation_endettement_action" model="ir.actions.act_window">
+            <field name="name">Rapport d'endettement</field>
+            <field name="res_model">credit.disponible</field>
+            <field name="view_mode">tree,pivot,form</field>
+            <field name="view_ids" eval="[(5, 0, 0),
+                        (0, 0, {'view_mode': 'tree', 'view_id': ref('credit_bancaire.view_endettement_tree')}),
+                        (0, 0, {'view_mode': 'pivot', 'view_id': ref('credit_bancaire.view_endettement_pivot')}),
+                        (0, 0, {'view_mode': 'form', 'view_id': ref('credit_bancaire.view_disponible_form')})]"/>
+        </record>
+        <menuitem id="endettement_management_menu_credit"
+                  name="Endettement"
+                  parent="account.menu_finance_reports"
+                  sequence="1"/>
+        <menuitem id="endett_menu_credit"
+                  name="Rapport d'endettement"
+                  parent="endettement_management_menu_credit"
+                  action="action_wizard_credit_endettement"
                   sequence="7"/>
     </data>
 </odoo>
